# qcom-memory-dump-collector

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  repolint.json
doc/: LGPL-COMPLIANCE.md  User_Guide.md
doc/coding-standard/cpp/: clang-format-full
src/: CrashCollection.cpp  CrashCollection.vcxproj  CrashCollection.vcxproj.filters  DeviceDiscovery.cpp  Globals.h  Version.h
src/callback/: ClientCallbackHandler.cpp  ClientCallbackHandler.h  Fwd.h
src/cli/: CLI.vcxproj  CLI.vcxproj.filters  CliArgumentDefinitions.cpp  CliArgumentDefinitions.h  CliCommands.cpp  CliCommands.h  CliHelp.cpp  CliHelp.h  CliOptions.h  CliParser.cpp  CliParser.h  CliParserUtil.cpp  CliParserUtil.h  Exception.h  ExceptionHandler.cpp  ExceptionHandler.h  FileSystem.cpp  FileSystem.h  ProgressCallback.cpp  ProgressCallback.h  ProgressWrapper.cpp  ProgressWrapper.h  Spinner.cpp  Spinner.h  main.cpp
src/communication/: CommonIO.h  Fwd.h  Usb.cpp  Usb.h
src/device/: Buffer.cpp  Buffer.h  Connection.cpp  Connection.h  DataPacket.cpp  DataPacket.h  ErrorMessage.h  Exception.h  Fwd.h  Impl.cpp  Impl.h  Logger.cpp  Logger.h  Manager.cpp  Manager.h
src/exports/: CrashCollection.h  Definitions.h  DeviceDiscovery.h  ImageManagementDefinitions.h
src/function/: Fwd.h  ImageTransfer.cpp  ImageTransfer.h  MemoryDumpCollector.cpp  MemoryDumpCollector.h
src/platform/: Assertions.h  Compiler.h  Exception.h  LangMacros.h  Target.h
src/protocol/: Base.cpp  Base.h  Fwd.h  Sahara.cpp  Sahara.h
src/qds/: .gitignore  CMakeLists.txt
src/qds/common/: qdver.cpp  qdver.h  utils.cpp  utils.h
src/qds/libusb/lib-1.0.27/include/libusb-1.0/: libusb.h
src/qds/libusb/lib-1.0.27/lib/arm64/debug/: libusb-1.0.lib
src/qds/libusb/lib-1.0.27/lib/arm64/release/: libusb-1.0.lib
src/qds/libusb/lib-1.0.27/lib/x64/Debug/: libusb-1.0.lib
src/qds/libusb/lib-1.0.27/lib/x64/Release/: libusb-1.0.lib
src/qds/libusb/lib-1.0.27/lib/x86/debug/: libusb-1.0.lib
src/qds/libusb/lib-1.0.27/lib/x86/release/: libusb-1.0.lib
src/qds/libusb/source/: libusb-dynamic-loader.cpp  libusb-dynamic-loader.h  qcom-libusb.cpp  qcom-libusb.h
src/qds/qds_lnx/inc/: DeviceCallbacks.h  QdIoQmi.h  lpcpublic.h  qdaio.h  qdpublic.h  qdutils.h  version.h  windows_compatible.h
src/qds/qds_lnx/libLNX/: Makefile  QdIoQmi.cpp  liblpc.cpp  qcdev.cpp  qdaio.cpp
src/qds/qds_win/: PropertySheet_microsoft_sdk.props  QcDevice.sln  QcDevice.vcxproj  QcDevice.vcxproj.filters  QdIoQmi.cpp  QdIoQmi.h  StaticLib.props  qdpublic.h  scandev.cpp  scandev.h
src/report/: DataContainer.cpp  DataContainer.h  Fwd.h  StatusManager.cpp  StatusManager.h  Thread.cpp  Thread.h
src/rpc/: DeviceManagerHandler.cpp  DeviceManagerHandler.h  ImageManagementServiceHandler.cpp  ImageManagementServiceHandler.h  ImageManagementServiceTypes.cpp  Service.h
src/service/: DeviceManagerHandler.cpp  DeviceManagerHandler.h  Fwd.h  ImageManagementServiceHandler.cpp  ImageManagementServiceHandler.h  Service.h
src/tracker/: FunctionTracker.cpp  FunctionTracker.h
src/util/: AppEvent.h  AppMessage.h  Event.cpp  Event.h  FunctionHelper.h  MathHelper.h  MemoryHelper.h  StringHelper.h  SystemHelper.h  ThisThread.cpp  ThisThread.h  ThreadHelper.h  TimeHelper.h
